@@ -1,5 +1,7 @@
 package unittests.parsers;
 
+import unittests.PomXmlBuilder;
+
 import com.google.inject.Guice;
 import com.google.inject.Injector;
 import com.google.inject.Key;
@@ -16,8 +18,6 @@ import org.junit.jupiter.api.io.TempDir;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.*;
@@ -39,12 +39,9 @@ public class JavadocPomParserTests {
                 new ParsersModule(),
                 new ModelModule(),
                 new CachesModule(),
-                new com.google.inject.AbstractModule() {
-                    @Override
-                    protected void configure() {
-                        bind(PomContainer.class).toInstance(pomContainer);
-                        bind(Logger.class).toInstance(logger);
-                    }
+                binder -> {
+                    binder.bind(PomContainer.class).toInstance(pomContainer);
+                    binder.bind(Logger.class).toInstance(logger);
                 }
         );
 
@@ -55,7 +52,12 @@ public class JavadocPomParserTests {
 
     @Test
     void includesEntryWhenJavadocJarExistsNextToPom(@TempDir Path tmp) throws Exception {
-        Path pom = write(tmp.resolve("lib-1.0.pom"), simplePom("org.example", "lib", "1.0"));
+        Path pom = PomXmlBuilder.pom()
+                .groupId("org.example")
+                .artifactId("lib")
+                .version("1.0")
+                .writeTo(tmp.resolve("lib-1.0.pom"));
+
         Path javadoc = tmp.resolve("lib-1.0-javadoc.jar");
         Files.write(javadoc, new byte[]{0});
 
@@ -69,7 +71,12 @@ public class JavadocPomParserTests {
 
     @Test
     void skipsEntryWhenJavadocJarDoesNotExist(@TempDir Path tmp) throws Exception {
-        Path pom = write(tmp.resolve("lib-1.0.pom"), simplePom("org.example", "lib", "1.0"));
+        Path pom = PomXmlBuilder.pom()
+                .groupId("org.example")
+                .artifactId("lib")
+                .version("1.0")
+                .writeTo(tmp.resolve("lib-1.0.pom"));
+
         when(pomContainer.getAllPoms(tmp.toString())).thenReturn(Collections.singleton(pom));
 
         HashMap<String, Path> result = parser.getArtifactCoords(tmp.toString(), Optional.empty());
@@ -79,8 +86,12 @@ public class JavadocPomParserTests {
 
     @Test
     void fallsBackToParentForVersionAndResolvesJarNameAccordingly(@TempDir Path tmp) throws Exception {
-        Path pom = write(tmp.resolve("child.pom"), pomWithParentVersion("org.example", "child", "9.9"));
-        Path javadoc = tmp.resolve("child-9.9-javadoc.jar");
+        Path pom = PomXmlBuilder.pom()
+                .parent("org.example", "parent", "2.5")
+                .artifactId("child")
+                .writeTo(tmp.resolve("child.pom"));
+
+        Path javadoc = tmp.resolve("child-2.5-javadoc.jar");
         Files.write(javadoc, new byte[]{0});
 
         when(pomContainer.getAllPoms(tmp.toString())).thenReturn(Collections.singleton(pom));
@@ -93,51 +104,24 @@ public class JavadocPomParserTests {
 
     @Test
     void whenArtifactNamesPresentUsesGetSelectedPoms(@TempDir Path tmp) throws Exception {
-        Path pom = write(tmp.resolve("aa-1.0.pom"), simplePom("org.example", "aa", "1.0"));
-        Path javadoc = tmp.resolve("aa-1.0-javadoc.jar");
+        Path pom = PomXmlBuilder.pom()
+                .groupId("org.example")
+                .artifactId("lib")
+                .version("1.0")
+                .writeTo(tmp.resolve("lib-1.0.pom"));
+
+        Path javadoc = tmp.resolve("lib-1.0-javadoc.jar");
         Files.write(javadoc, new byte[]{0});
 
-        List<String> names = Arrays.asList("aa");
+        List<String> names = List.of("lib");
         when(pomContainer.getSelectedPoms(tmp.toString(), names)).thenReturn(Collections.singleton(pom));
 
         HashMap<String, Path> result = parser.getArtifactCoords(tmp.toString(), Optional.of(names));
 
         assertEquals(1, result.size());
         assertEquals(javadoc, result.get(pom.toString()));
-        verify(pomContainer, times(1)).getSelectedPoms(tmp.toString(), names);
-        verifyNoMoreInteractions(pomContainer);
-    }
 
-    private static Path write(Path path, String content) throws IOException {
-        Files.write(path, content.getBytes(StandardCharsets.UTF_8));
-        return path;
-    }
-
-    private static String simplePom(String groupId, String artifactId, String version) {
-        return ""
-                + "<project xmlns=\"http://maven.apache.org/POM/4.0.0\""
-                + " xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\""
-                + " xsi:schemaLocation=\"http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd\">"
-                + "<modelVersion>4.0.0</modelVersion>"
-                + "<groupId>" + groupId + "</groupId>"
-                + "<artifactId>" + artifactId + "</artifactId>"
-                + "<version>" + version + "</version>"
-                + "</project>";
-    }
-
-    private static String pomWithParentVersion(String groupId, String artifactId, String parentVersion) {
-        return ""
-                + "<project xmlns=\"http://maven.apache.org/POM/4.0.0\""
-                + " xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\""
-                + " xsi:schemaLocation=\"http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd\">"
-                + "<modelVersion>4.0.0</modelVersion>"
-                + "<parent>"
-                + "<groupId>" + groupId + "</groupId>"
-                + "<artifactId>parent</artifactId>"
-                + "<version>" + parentVersion + "</version>"
-                + "</parent>"
-                + "<groupId>" + groupId + "</groupId>"
-                + "<artifactId>" + artifactId + "</artifactId>"
-                + "</project>";
+        verify(pomContainer).getSelectedPoms(tmp.toString(), names);
+        verify(pomContainer, never()).getAllPoms(anyString());
     }
 }
